add routing to make an order button

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,1 +1,81 @@
-<h1>hello</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="static/index.css">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=Aclonica&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Aclonica|Darker+Grotesque|Gilda+Display&display=swap" rel="stylesheet">
+
+
+
+    <title>Document</title>
+
+</head>
+
+<body>
+
+    <header>
+        <nav class="navbar navbar-expand-lg">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-content"
+                aria-controls="navbar-content" aria-expanded="false" aria-label="toggle-navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbar-content">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" style="color: white;" href="/#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Sign Up</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Sign In</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Make an order</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <div class="box">
+            <div class="box-1"></div>
+            <div class="box-2"></div>
+        </div>
+    </header>
+    <div class="container">
+
+        <section class="section-a">
+            <div>
+                <h1>Gas Chapp</h1>
+                <p>
+                    Out of gas?No need to worry. Order from the comfort of your home and we will deliver it in minutes!<br><br>
+
+                    <button type="button" class="btn btn-warning btn-lg text-white"><a href="auth/login">Make an order</a></button>
+
+                </p>
+            </div>
+            <img src="https://www.flogas.ie/assets/components/mor/General/img/InnerWideCylinders.jpg" alt="" />
+
+
+        </section>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+</body>
+
+</html>
