--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,7 +20,19 @@
            <h1>Get Intouch With Us</h1>
            <center><hr></center>
            <div class="row">
-                <div class="col-md-2"></div>
+                <div class="col-md-2">
+                        <div class="col-md-8">
+                                {% with messages = get_flashed_messages(with_categories=true) %}
+                                  {% if messages %}
+                                    {% for category, message in messages %}
+                                      <div class="alert alert-{{ category }}">
+                                        {{ message }}
+                                      </div>
+                                    {% endfor %}
+                                  {% endif %}
+                                {% endwith %}
+                                {% block content %}{% endblock %}
+                </div>
                 <div class="col-md-3 demo-solution--flexbox">
                      <img src="https://img.icons8.com/bubbles/2x/facebook-new.png" alt="">
                 <span>Gas-ChappKenya</span>
