--- a/app/templates/order.html
+++ b/app/templates/order.html
@@ -1,93 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     {% if title %}
     <title>{{ title }}</title>
     {% else %}
     <title>Gas-Chapp</title>
     {% endif %}
 </head>
-<body>   
-<div class="container order">
-<h1>order</h1>
-<div class="row">
-   
-    <div class="col-md-3 doit"><img src="https://gobeba.com/wp-content/uploads/2019/03/afrigas-13kg-200x258.jpg" alt="">
 
-       <center>
-           <p>Petrol station Refill</p>
-           <p>Ksh 2500</p>
-           <p>13kg</p>
-           <a href=""> <button type="button" class="btn btn-primary">Add to cart</button></a></center>
-    </div>
-    <div class="col-md-3 doit"><img src="https://gobeba.com/wp-content/uploads/2019/04/progas-6kg-200x258.jpg" alt="">
-   
-        <center>
-                <p>Waithaka station Refill</p>
-                <p>Ksh 1500</p>
-                <p>6kg</p>
-            <a href=""> <button type="button" class="btn btn-primary">Add to cart</button></a></center></div>
-        <div class="col-md-3 doit"><img src="https://gobeba.com/wp-content/uploads/2019/03/kgas-13kg-200x258.jpg" alt="">
-            <center>
+<body>
+    <div class="container order">
+        <h1>order</h1>
+        <div class="row">
+
+            <div class="col-md-3 doit"><img src="https://gobeba.com/wp-content/uploads/2019/03/afrigas-13kg-200x258.jpg"
+                    alt="">
+
+                <center>
+                    <p>Petrol station Refill</p>
+                    <p>Ksh 2500</p>
+                    <p>13kg</p>
+                    <a href="location"> <button type="button" class="btn btn-primary">Add to cart</button></a>
+                </center>
+            </div>
+            <div class="col-md-3 doit"><img src="https://gobeba.com/wp-content/uploads/2019/04/progas-6kg-200x258.jpg"
+                    alt="">
+
+                <center>
+                    <p>Waithaka station Refill</p>
+                    <p>Ksh 1500</p>
+                    <p>6kg</p>
+                    <a href="location"> <button type="button" class="btn btn-primary">Add to cart</button></a>
+                </center>
+            </div>
+            <div class="col-md-3 doit"><img src="https://gobeba.com/wp-content/uploads/2019/03/kgas-13kg-200x258.jpg"
+                    alt="">
+                <center>
                     <p>Nuru station Refill</p>
                     <p>Ksh 1000</p>
                     <p>13kg</p>
-                <a href=""> <button type="button" class="btn btn-primary">Add to cart</button></a></center></div>
-            <div class="col-md-3 doit"><img src="https://gobeba.com/wp-content/uploads/2019/03/afrigas-13kg-200x258.jpg" alt="">
+                    <a href="location"> <button type="button" class="btn btn-primary">Add to cart</button></a>
+                </center>
+            </div>
+            <div class="col-md-3 doit"><img src="https://gobeba.com/wp-content/uploads/2019/03/afrigas-13kg-200x258.jpg"
+                    alt="">
                 <center>
-                        <p>Angaza station Refill</p>
-                        <p>Ksh 1400</p>
-                        <p>6kg</p>
-                    <a href=""> <button type="button" class="btn btn-primary">Add to cart</button></a></center>
-             </div>
+                    <p>Angaza station Refill</p>
+                    <p>Ksh 1400</p>
+                    <p>6kg</p>
+                    <a href="location"> <button type="button" class="btn btn-primary">Add to cart</button></a>
+                </center>
+            </div>
 
-             <!---- add more gases
+            <!---- add more gases
 
             -->
 
             <br><br>
-              
-    <div class="col-md-3 doit"><img src="https://gobeba.com/wp-content/uploads/2019/03/total-13kg-200x200.jpg" alt="">
 
-        <center>
-            <p>Kenol Petrol station Refill</p>
-            <p>Ksh 2500</p>
-            <p>13kg</p>
-            <a href=""> <button type="button" class="btn btn-primary">Add to cart</button></a></center>
-     </div>
-     <div class="col-md-3 doit"><img src="https://gobeba.com/wp-content/uploads/2019/03/mpishi-13kg-200x258.jpg" alt="">
-    
-         <center>
-                 <p>Dean Refill</p>
-                 <p>Ksh 1500</p>
-                 <p>6kg</p>
-             <a href=""> <button type="button" class="btn btn-primary">Add to cart</button></a></center></div>
-         <div class="col-md-3 doit"><img src="https://gobeba.com/wp-content/uploads/2019/03/afrigas-13kg-200x258.jpg" alt="">
-             <center>
-                     <p>Morish Refill</p>
-                     <p>Ksh 1000</p>
-                     <p>13kg</p>
-                 <a href=""> <button type="button" class="btn btn-primary">Add to cart</button></a></center></div>
-             <div class="col-md-3 doit"><img src="https://gobeba.com/wp-content/uploads/2019/03/afrigas-13kg-200x258.jpg" alt="">
-                 <center>
-                         <p>Wabebe station Refill</p>
-                         <p>Ksh 1400</p>
-                         <p>6kg</p>
-                     <a href=""> <button type="button" class="btn btn-primary">Add to cart</button></a></center>
-              </div>
- 
+            <div class="col-md-3 doit"><img src="https://gobeba.com/wp-content/uploads/2019/03/total-13kg-200x200.jpg"
+                    alt="">
+
+                <center>
+                    <p>Kenol Petrol station Refill</p>
+                    <p>Ksh 2500</p>
+                    <p>13kg</p>
+                    <a href="location"> <button type="button" class="btn btn-primary">Add to cart</button></a>
+                </center>
+            </div>
+            <div class="col-md-3 doit"><img src="https://gobeba.com/wp-content/uploads/2019/03/mpishi-13kg-200x258.jpg"
+                    alt="location">
+
+                <center>
+                    <p>Dean Refill</p>
+                    <p>Ksh 1500</p>
+                    <p>6kg</p>
+                    <a href="location"> <button type="button" class="btn btn-primary">Add to cart</button></a>
+                </center>
+            </div>
+            <div class="col-md-3 doit"><img src="https://gobeba.com/wp-content/uploads/2019/03/afrigas-13kg-200x258.jpg"
+                    alt="">
+                <center>
+                    <p>Morish Refill</p>
+                    <p>Ksh 1000</p>
+                    <p>13kg</p>
+                    <a href="location"> <button type="button" class="btn btn-primary">Add to cart</button></a>
+                </center>
+            </div>
+            <div class="col-md-3 doit"><img src="https://gobeba.com/wp-content/uploads/2019/03/afrigas-13kg-200x258.jpg"
+                    alt="">
+                <center>
+                    <p>Wabebe station Refill</p>
+                    <p>Ksh 1400</p>
+                    <p>6kg</p>
+                    <a href="location"> <button type="button" class="btn btn-primary">Add to cart</button></a>
+                </center>
+            </div>
+
             <div>
 
-       
-    </div>
+
+            </div>
 
 
 
-    <!---</div>
+            <!---</div>
 {% for order in orders %}
 <orders class="media content-section">
         <div class="media-body">
@@ -108,75 +131,78 @@
 
 ----->
 
-<style>
-h1{
-    text-align: center;
-}
+            <style>
+                h1 {
+                    text-align: center;
+                }
 
-.content-section {
-  background: #ffffff;
-  padding: 10px 20px;
-  border: 1px solid #dddddd;
-  border-radius: 3px;
-  margin-bottom: 20px;
-}
+                .content-section {
+                    background: #ffffff;
+                    padding: 10px 20px;
+                    border: 1px solid #dddddd;
+                    border-radius: 3px;
+                    margin-bottom: 20px;
+                }
 
-.arordersticle-title {
-  color: #444444;
-}
+                .arordersticle-title {
+                    color: #444444;
+                }
 
-a.orders-title:hover {
-  color: #428bca;
-  text-decoration: none;
-}
+                a.orders-title:hover {
+                    color: #428bca;
+                    text-decoration: none;
+                }
 
-.orders-content {
-  white-space: pre-line;
-}
+                .orders-content {
+                    white-space: pre-line;
+                }
 
-.orders-img {
-  height: 65px;
-  width: 65px;
-  margin-right: 16px;
-}
+                .orders-img {
+                    height: 65px;
+                    width: 65px;
+                    margin-right: 16px;
+                }
 
-.orders-metadata {
-  padding-bottom: 1px;
-  margin-bottom: 4px;
-}
+                .orders-metadata {
+                    padding-bottom: 1px;
+                    margin-bottom: 4px;
+                }
 
-.orders-metadata a:hover {
-  color: #333;
-  text-decoration: none;
-}
+                .orders-metadata a:hover {
+                    color: #333;
+                    text-decoration: none;
+                }
 
-.orders-svg {
-  width: 25px;
-  height: 25px;
-  vertical-align: middle;
-}
+                .orders-svg {
+                    width: 25px;
+                    height: 25px;
+                    vertical-align: middle;
+                }
 
-.account-img {
-  height: 125px;
-  width: 125px;
-  margin-right: 20px;
-  margin-bottom: 16px;
-}
+                .account-img {
+                    height: 125px;
+                    width: 125px;
+                    margin-right: 20px;
+                    margin-bottom: 16px;
+                }
 
-.account-heading {
-  font-size: 2.5rem;
-}
+                .account-heading {
+                    font-size: 2.5rem;
+                }
 
-.doit{
-    padding-top: 40px;
-    height: auto;
-    width: 100%;
-    box-shadow: 5px 5px 5px #dcd9d9;
-    border: 1px solid #d4d4d4;
-    margin: 0px auto;
-}
+                .doit {
+                    padding-top: 40px;
+                    height: auto;
+                    width: 100%;
+                    box-shadow: 5px 5px 5px #dcd9d9;
+                    border: 1px solid #d4d4d4;
+                    margin: 0px auto;
+                }
 
-.btn-primary{
-    margin-bottom: 15px;
-}
-</style>
+                .btn-primary {
+                    margin-bottom: 15px;
+                }
+            </style>
+            
+        </body>
+        </html>
