--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,7 @@
                 <p>
                     Out of gas?No need to worry. Order from the comfort of your home and we will deliver it in minutes!<br><br>
 
-                    <button type="button" class="btn btn-warning btn-lg text-white"><a href="auth/login">Make an order</a></button>
+                    <button type="button" class="btn btn-warning btn-lg text-white"><a href="{{url_for('auth.signin')}}">Make an order</a></button>
 
                 </p>
             </div>
