--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,6 +5,15 @@
     <!-- Navbar block -->
     {% block navbar %}
     {% include 'navbar.html' %}
+    {% with messages = get_flashed_messages(with_categories=true) %}
+                                  {% if messages %}
+                                    {% for category, message in messages %}
+                                      <div class="alert alert-{{ category }}">
+                                        {{ message }}
+                                      </div>
+                                    {% endfor %}
+                                  {% endif %}
+                                {% endwith %}
     {% endblock %}
     
     <!-- content block -->
