--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -37,7 +37,7 @@
                         <a class="nav-link" href="{{url_for('auth.signin')}}">Buyer</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Make an order</a>
+                        <a class="nav-link" href="{{url_for('main.order')}}">Make an order</a>
                     </li>
                 </ul>
             </div>
